# will-save-the-transcriber

./: .gitignore  COMPATIBILITY.md  CONTRIBUTING.md  PODCAST_TRANSCRIBER_README.md  README.md  assistant.py  env-example  fix_compatibility.py  podcast_transcriber.py  pyproject.toml  setup_compatible_env.py  transcribe.py  transcribe_advanced.py  transcribe_simple.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  transcription_correction.md
episodes/nano_adventure/: nano_adventure_episode_100_donde_esta_la_bibliotecha.md  nano_adventure_episode_101_migo_7_in_the_library_with_the_hammer.md  nano_adventure_episode_102_caverns_of_contrivance.md  nano_adventure_episode_103_was_that_good_for_you.md  nano_adventure_episode_104_leora_reduxley.md  nano_adventure_episode_105_a_o_no.md  nano_adventure_episode_106_don't_spill_the_beans.md  nano_adventure_episode_90_injection,_your_honor!_retrospection.md  nano_adventure_episode_91_nano_venture_at_the_museum.md  nano_adventure_episode_92_soldier's_ire.md  nano_adventure_episode_93_this_is_my_first_rodeo.md  nano_adventure_episode_94_i'm_not_a_medic,_i'm_just_a_mouse.md  nano_adventure_episode_95_it_is_time_for_boom.md  nano_adventure_episode_96_it's_a_life_or_desk_situation.md  nano_adventure_episode_97_stars_struck.md  nano_adventure_episode_98_quit_stalling.md  nano_adventure_episode_99_you_are_now_entering_the_liminal_space.md
episodes/threefold_conspiracy_book_1/: annotated_episode_2.md  attributed_episode_2.md  episode_02-test.md  episode_16_life's_a_breach.md  (+27 more)
(+183 files in other folders)
