[project]
name = "will-save-the-transcriber"
version = "0.1.0"
description = "A transcription tool using WhisperX with speaker diarization"
requires-python = ">=3.8"
dependencies = [
    "whisperx",
    "torch>=2.0.0,<3.0.0",
    "torchaudio>=2.0.0,<3.0.0",
    "transformers",
    "librosa",
    "soundfile",
    "python-dotenv",
    "pyannote-audio>=3.0.0,<4.0.0",
    "pytorch-lightning>=2.0.0,<3.0.0",
    "requests",
]

[tool.uv]
dev-dependencies = [] 